introduce com.annimon:stream