@@ -2,6 +2,8 @@ package com.hana053.micropost.presentation.core.components.micropostlist;
 
 import android.support.v7.widget.RecyclerView;
 
+import com.annimon.stream.Collectors;
+import com.annimon.stream.Stream;
 import com.hana053.micropost.domain.Micropost;
 import com.hana053.micropost.testing.RobolectricBaseTest;
 
@@ -10,8 +12,6 @@ import org.junit.Test;
 
 import java.util.Collections;
 import java.util.List;
-
-import rx.Observable;
 
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.nullValue;
@@ -29,11 +29,9 @@ public class PostListAdapterTest extends RobolectricBaseTest {
     @Test
     public void shouldGetFirstItemId() {
         assertThat(postListAdapter.getFirstItemId(), nullValue());
-        final List<Micropost> posts = Observable.range(100, 2)
+        final List<Micropost> posts = Stream.of(100, 101)
                 .map(id -> new Micropost(id, "", 0, null))
-                .toList()
-                .toBlocking()
-                .single();
+                .collect(Collectors.toList());
         postListAdapter.addAll(0, posts);
         assertThat(postListAdapter.getFirstItemId(), is(100L));
     }
@@ -41,11 +39,9 @@ public class PostListAdapterTest extends RobolectricBaseTest {
     @Test
     public void shouldGetLastItemId() {
         assertThat(postListAdapter.getFirstItemId(), nullValue());
-        final List<Micropost> posts = Observable.range(100, 2)
+        final List<Micropost> posts = Stream.of(100, 101)
                 .map(id -> new Micropost(id, "", 0, null))
-                .toList()
-                .toBlocking()
-                .single();
+                .collect(Collectors.toList());
         postListAdapter.addAll(0, posts);
         assertThat(postListAdapter.getLastItemId(), is(101L));
     }
@@ -59,11 +55,9 @@ public class PostListAdapterTest extends RobolectricBaseTest {
                 assertThat(itemCount, is(1));
             }
         });
-        final List<Micropost> posts = Observable.just(100)
+        final List<Micropost> posts = Stream.of(100)
                 .map(id -> new Micropost(id, "", 0, null))
-                .toList()
-                .toBlocking()
-                .single();
+                .collect(Collectors.toList());
         final boolean notified = postListAdapter.addAll(0, posts);
         assertThat(notified, is(true));
         assertThat(postListAdapter.getItemCount(), is(1));
