@@ -1,5 +1,7 @@
 package com.hana053.micropost.presentation.relateduserlist;
 
+import com.annimon.stream.Collectors;
+import com.annimon.stream.Stream;
 import com.hana053.micropost.domain.RelatedUser;
 import com.hana053.micropost.interactors.RelatedUserListInteractor;
 import com.hana053.micropost.presentation.core.services.AuthTokenService;
@@ -38,11 +40,9 @@ public class RelatedUserListServiceTest extends RobolectricBaseTest {
 
     @Test
     public void shouldLoadRelatedUsers() {
-        final List<RelatedUser> users = Observable.range(100, 2)
+        final List<RelatedUser> users = Stream.of(100, 101)
                 .map(relationshipId -> new RelatedUser(1, "test", "test@test.com", "", relationshipId))
-                .toList()
-                .toBlocking()
-                .single();
+                .collect(Collectors.toList());
         userListAdapter.addAll(0, users);
         final Observable<List<RelatedUser>> response = Observable.just(102)
                 .map(relationshipId -> new RelatedUser(1, "test", "test@test.com", "", relationshipId))
